debounce digests after receiving scheduler updates to reduce refreshes; use less buttons on detailed scheduler display to avoid jumping when hiding/showing buttons

--- a/app/app.less
+++ b/app/app.less
@@ -781,6 +781,10 @@ pre {
     opacity: 0.25;
 }
 
+.opacity-0 {
+    opacity: 0.0 !important;
+}
+
 .span-text-overflow-hidden-ellipsis {
     span {
         text-overflow: ellipsis;
